# python-templates

./: .gitignore  LICENSE  README.md  copier.yml  noxfile.py  pyproject.toml
basic_template/: copier.yml
basic_template/template/: noxfile.py  pyproject.toml.jinja  vulcan.yaml
general_template/: copier.yml
general_template/{{project_name}}/: noxfile.py  pyproject.toml.jinja
template/{{project_folder}}/: pyproject.toml.jinja
{{project_folder}}/: .gitignore  noxfile.py
{{project_name}}/: .pre-commit-config.yaml
